--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
     <link rel="stylesheet" href="css/fonts.css">
 </head>
 <body>
-    
-
+    <header>
+        <h1>TRAVE<span>L.</span></h1>
+        <nav>
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">SERVICE</a></li>
+                <li><a href="#">FOLIO</a></li>
+                <li><a href="#">TEAM</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+        </section>
+        <section>
+        </section>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
