adding nav bar and first section

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <header>
-        <h1>TRAVE<span>L.</span></h1>
-        <nav>
-            <ul>
+        <h1t class="logo">TRAVE<span class="logo-span">L.</span></h1t>
+        <nav class="main-nav">
+            <ul class="nav-list">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">SERVICE</a></li>
@@ -24,11 +24,15 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section  class="section-1">
+            <div>
+                <h2>We create websites & interfaces</h2>
+                <h2>CLIENTS REMEMBER</h2>
+                <input type="button" value="LEARN MORE">
+            </div>
         </section>
-        <section>
-        </section>
-    </main>
+
+         </main>
     <footer>
     </footer>
 </body>
