adding services and clients section

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 <body>
     <header>
-        <h1t class="logo">TRAVE<span class="logo-span">L.</span></h1t>
+        <div class="logo">TRAVE<span class="logo-span">L.</span></div>
         <nav class="main-nav">
             <ul class="nav-list">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">SERVICE</a></li>
-                <li><a href="#">FOLIO</a></li>
-                <li><a href="#">TEAM</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="#" class="nav-item">HOME</a></li>
+                <li><a href="#" class="nav-item">ABOUT</a></li>
+                <li><a href="#" class="nav-item">SERVICE</a></li>
+                <li><a href="#" class="nav-item">FOLIO</a></li>
+                <li><a href="#" class="nav-item">TEAM</a></li>
+                <li><a href="#" class="nav-item">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -31,9 +31,54 @@
                 <input type="button" value="LEARN MORE">
             </div>
         </section>
-
-         </main>
+        <section class="clients">
+            <h2 class="clients-header">SELECTED CLIENTS</h2>
+            <div class="clients-logo">
+                <div class="client-logo"></div>
+                <div class="client-logo"></div>
+                <div class="client-logo"></div>
+                <div class="client-logo"></div>
+                <div class="client-logo"></div>
+                <div class="client-logo"></div>
+            </div>
+        </section>
+        <section class="services">
+            <h2 class="services-header">SERVICES</h2>
+            <p class="service-text">We have been moving excellent encounters for a considerable length of time through our cutting-edge planned occasion bundles and other fundamental travel administrations. We rouse our clients to carry on with a rich life, brimming with extraordinary travel encounters.</p>
+            <div class="service-boxes">
+                <div class="service-card">
+                    <h3>WEB DESIGN</h3>
+                    <ul>
+                        <li>WEB DESIGN</li>
+                        <li>Responsive Mailing</li>
+                        <li>Landing Page Design</li>
+                    </ul>
+                </div>
+            
+                <div class="service-card">
+                    <h3>DEVELOPMENT</h3>
+                    <ul>
+                        <li>Front-End Development</li>
+                        <li>CMS Implementation</li>
+                        <li>Mobile Apps Development</li>
+                    </ul>
+                </div>
+                
+                <div class="service-card">
+                    <h3>PRINT DESIGN</h3>
+                    <ul>
+                        <li>Branding</li>
+                        <li>Corporate Identity</li>
+                        <li>Print Ads Design</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer>
     </footer>
+
+
+
 </body>
 </html>
