adding portfolio photos, add sections

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -111,17 +112,53 @@
             
     <section class="team">
         <h2 class="team-header">OUR TEAM</h2>
+    <div class="container">
 
         <div class="member"></div>
         <div class="member"></div>
         <div class="member"></div>
         <div class="member"></div>
         <div class="member"></div>
+    </div>
+    </section>
 
+    <section>
+        <h2>CONTACT US</h2>
+        <p>We offer the best limits on our top-rated visit bundles to clients who pick our viable administrations over and over. How about we remind you indeed that we don’t expect to be your visit and travel specialists; we endeavor to be your vacation accomplices until the end of time. Contact us for any query regarding your travel.</p>
+        <div>
+            <div>
+                <input type="email" name="" id="">
+            </div>
+            <div>
+                <input type="Your name">
+            </div>
+            <div>
+                <input type="Your message">
+            </div>
+            <div>
+                <button class="send-button">SEND</button>
+            </div>
+        </div>
     </section>
 
     </main>
     <footer>
+
+        <h2>CONTACT DETAILS</h2>
+        <!-- Mobile Phone -->
+   <a href="tel:+1234567890"><i class="fas fa-phone"></i></a>
+   <a href="mailto:example@gmail.com"><i class="fas fa-envelope"></i></a>
+   <a href="mailto:example@gmail.com"><i class="fas fa-comment"></i></a>
+   <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+   <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+<!-- Instagram -->
+   <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+  
+ 
+  <!-- Email / Message
+  <a href="mailto:example@gmail.com"><i class="fas fa-envelope"></i></a>
+   -->
+ 
     </footer>
 
 
