--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <form class="contact-form">
                 <input type="Your message">
             </form>
-            <form class="contact-form">
+            <form class="contact-form"> 
                 <button class="send-button">SEND</button>
             </form>
         </div>
@@ -144,11 +144,15 @@
     </main>
     <footer>
 
-        <h2>CONTACT DETAILS</h2>
+        <h2 class="footer-header">CONTACT DETAILS</h2>
         <!-- Mobile Phone -->
+   <div class="footer-contact-icons">      
    <a href="tel:+1234567890"><i class="fas fa-phone"></i></a>
    <a href="mailto:example@gmail.com"><i class="fas fa-envelope"></i></a>
    <a href="mailto:example@gmail.com"><i class="fas fa-comment"></i></a>
+   </div>
+   
+   
    <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
    <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
 <!-- Instagram -->
