style section-1 text

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </header>
     <main>
         <section  class="section-1">
-            <div>
+            <div class="section-1-text">
                 <h2>We create websites & interfaces</h2>
-                <h2>CLIENTS REMEMBER</h2>
-                <input type="button" value="LEARN MORE">
+                <h2 class="clients-remember">CLIENTS REMEMBER</h2>
+                <input type="button" class="button" value="LEARN MORE">
             </div>
         </section>
         <section class="clients">
