add top-nav hover

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="logo">TRAVE<span class="logo-span">L.</span></div>
-        <nav class="main-nav">
+        <nav class="top-nav">
             <ul class="nav-list">
                 <li><a href="#" class="nav-item">HOME</a></li>
                 <li><a href="#" class="nav-item">ABOUT</a></li>
@@ -163,16 +163,16 @@
         <a href="mailto:example@gmail.com"><i class="fas fa-comment"></i></a>
    </div>
    
-   
+  
         <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-<!-- Instagram -->
+        <!-- <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+Instagram -->
         <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
   
  
-  <!-- Email / Message
+ 
   <a href="mailto:example@gmail.com"><i class="fas fa-envelope"></i></a>
-   -->
+   
  
     </footer>
 
