--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <div class="service-card">
                     <h3>DEVELOPMENT</h3>
                     <ul>
+                        <li> test </li>
                         <li>Front-End Development</li>
                         <li>CMS Implementation</li>
                         <li>Web Apps Development</li>
